# MoveIt2_try

./: README.md  install_dependencies.sh
src/bot_movit/: CMakeLists.txt  ReadMe.md  install_dependencies.sh  package.xml
src/bot_movit/config/: bot_discribe.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  simple_manipulator.ros2_control.xacro  simple_manipulator.srdf  simple_manipulator.urdf.xacro
src/bot_movit/launch/: bot.launch.py
src/bot_movit/scripts/: node_run.py  qt_gui.py
src/bot_movit/src/: move_bot_service.cpp
src/bot_movit/srv/: SetJointP.srv
